# lox_cpp_meson

./: meson.build
include/lox_cpp/: scanner.hpp  tokens.hpp
src/: main.cpp  scanner.cpp
tests/: token_test.cpp
